# openpi

./: .gitignore  pyproject.toml
examples/: academic_clean.mplstyle  charts.ipynb  inference.ipynb
examples/leros2/: README.md  compose.yml  env.py  main.py
examples/libero/: main.py  requirements.in  requirements.txt  visulize.ipynb
scripts/: compute_norm_stats.py  serve_policy.py
scripts/docker/: train.sh
src/openpi/: transforms.py  transforms_test.py
src/openpi/models/: pi0.py
src/openpi/policies/: leros2_policy.py
src/openpi/training/: config.py  data_loader_lerobot_test.py
